# ECE420_Lab3

./: CMakeLists.txt  Makefile~  README.md  data_input  datagen  main  main.c  main.c~  serialtester
__MACOSX/: ._check.sh  ._serialtester.c
attempt1/: CMakeLists.txt  Makefile  data_input  data_output  datagen  main  main.c  solution
attempt2/: Makefile  data_output  main  main.c  serialtester  solution.c
